Removed "overscroll-behavior: none" on HTML document root to fix Lenis issue not giving scroll at all on mobile devices

--- a/wp-content/themes/bylica-kancelaria/shared/scss/lenis-scroll-fix.css
+++ b/wp-content/themes/bylica-kancelaria/shared/scss/lenis-scroll-fix.css
@@ -1,5 +1,5 @@
 html,
 body {
   height: auto;
-  overscroll-behavior: none;
+  /* overscroll-behavior: none; */
 }
